@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-30T02:06:28Z",
+  "timestamp" : "2022-08-31T16:25:03Z",
   "count_outdated" : 117,
   "uniques_outdated" : 80,
-  "count" : 133,
-  "uniques" : 90,
+  "count" : 135,
+  "uniques" : 91,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 4, 8 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ]
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
