@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 18,
   "uniques": 7,
   "clones": [
     {
@@ -16,6 +16,11 @@
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 8,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
