@@ -1,3 +1,11 @@
+2022-08-31T16:25:03Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965455858
+* notice: last 14d: unq all: 7 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 90 133
+* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 91 135
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-30T02:06:28Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2953049020
 * notice: last 14d: unq all: 7 16
